# startup-bench

./: .gitignore  CONTRIBUTING.md  README.md  THE_STARTUP_BENCH_RFC.md  pyproject.toml
docs/: article_the_startup_bench_precalibration.md  benchmark_known_issues.md  benchmark_maturity_plan.md  benchmark_status.md  benchmark_task_board.md  calibration_outcomes.md  calibration_taskforce_strategy.md  coverage_build_plan.md  coverage_expansion_policy.md  evaluation_modes.md  evaluator_adjudication_log.md  external_benchmark_adoption_pack_v0_9_0.md  founder_operator_outreach.md  frozen_active_packs.md  getting_started.md  hidden_pack_rotation_policy_v0_9_0.md  human_review_wave_001.md  human_review_wave_002.md  leaderboard_governance_pack_v0_9_0.md  model_review_prompt_guide.md  model_review_wave_001.md  model_reviewer_panel.md  model_trial_wave_001.md  model_trial_wave_full_dev.md  official_evaluation_window_v0_9_0.md  operator_study_plan.md  pack_lifecycle_changelog.md  pre_freeze_checklist.md  pre_human_calibration_execution_plan.md  real_world_crisis_scenarios.md  reviewer_manual.md  reviewer_outreach_wave_001.md  reviewer_outreach_wave_002.md  seeded_event_variants.md  sota_benchmark_audit.md  sota_reaudit.md  sota_task_roadmap.md  technical_contributor_brief.md  testing_coverage.md  volunteer_call.md  (+1 more)
examples/: benchmark_task_ledger.json  canary_public_fresh_manifest.json  canary_public_test_manifest.json  coverage_public_fresh_manifest.json  coverage_public_test_manifest.json  dev_scenario_suite.json  external_benchmark_adoption_pack_v0_9_0.json  (+243 more)
spec/: README.md  (+14 more)
(+106 files in other folders)
